--- a/app/views/frontend/sections/footer/footer.twig
+++ b/app/views/frontend/sections/footer/footer.twig
@@ -10,7 +10,18 @@
                     Видеотека интерьерного тюнинга
                 </div>
                 <div class="footer_item footer_item__payment">
-                    Иконки
+                    <div class="footer_item__payment_icon">
+                        {{ Svg.icon('visa', 0, 40,30) }}
+                    </div>
+                    <div class="footer_item__payment_icon">
+                        {{ Svg.icon('mastercard', 0, 40,30) }}
+                    </div>
+                    <div class="footer_item__payment_icon">
+                        {{ Svg.icon('google_pay', 0, 40,30) }}
+                    </div>
+                    <div class="footer_item__payment_icon">
+                        {{ Svg.icon('apple_pay', 0, 40,30) }}
+                    </div>
                 </div>
             </div>
             <div class="footer_col">
