--- a/app/views/static/error.html.twig
+++ b/app/views/static/error.html.twig
@@ -3,8 +3,8 @@
 {% import 'frontend/elements/input/input_macro.twig' as Input %}
 {% block header_title %}{{ page_name }}{% endblock %}
     {% block content %}
-      <div class="error404">
-        <div class="error404__wrapper">
+
+        <div class="login_page_wrapper bg_dark1">
           <div class="modal white-popup">
             <div class="modal__wrapper">
               <div class="modal__head">
@@ -35,6 +35,5 @@
               </div>
             </div>
           </div>
-        </div>
       </div>
     {% endblock %}
