--- a/app/views/static/help.twig
+++ b/app/views/static/help.twig
@@ -10,9 +10,9 @@
                     <input type="hidden" class="element" name="action" value="help_need">
                     <div class="help_left">
                         <div class="help_input">
-                            {{ Input.field('name', {
+                            {{Input.field('name', {
                                 label: 'Имя',
-                                dop_class:'element',
+                                dop_clas:'element',
                                 parent_mod:2,
                                 placeholder:'Вас зовут',
 
@@ -22,7 +22,7 @@
                         <div class="help_input">
                             {{ Input.field('email', {
                                 label: 'Email(по которому зарегистрирован аккаунт)',
-                                dop_class:'element',
+                                dop_clas:'element',
                                 parent_mod:2,
                                 placeholder:'example@mail.ru',
 
