--- a/app/views/frontend/components/video_thumb/_video_thumb.scss
+++ b/app/views/frontend/components/video_thumb/_video_thumb.scss
@@ -38,7 +38,7 @@
   height: 480px;
   background: #1F2128;
   border-radius: 10px;
-
+  transition: all 0.3s;
   display: flex;
   flex-direction: column;
 
@@ -171,7 +171,7 @@
   height: 270px;
   border-radius: 10px;
   overflow: hidden;
-
+  transition: all 0.3s;
   background: #1F2128;
   display: flex;
   flex-direction: column;
