--- a/app/views/frontend/components/ways/_ways.scss
+++ b/app/views/frontend/components/ways/_ways.scss
@@ -12,7 +12,7 @@
   padding: 32px 28px;
   text-align: center;
   overflow: hidden;
-
+  transition: all 0.3s;
   @include  media("<1200px"){
     width: 250px;
     height: 350px;
