--- a/app/views/frontend/sections/contacs/_contacs.scss
+++ b/app/views/frontend/sections/contacs/_contacs.scss
@@ -6,15 +6,30 @@
   color: white;
   display: flex;
 
+  @include media('<610px'){
+    flex-direction: column;
+    justify-content: center;
+  }
   &_item{
     width: 50%;
+    @include media('<610px'){
+      padding-bottom: 20px;
+      width: 100%;
+    }
     &_title{
       font-size: 18px;
       padding-bottom: 20px;
 
+      @include media('<850px'){
+        font-size: 16px;
+      }
     }
+
     &_value{
       font-size: 32px;
+      @include media('<850px'){
+      font-size: 24px;
+    }
     }
   }
 }
