--- a/app/views/frontend/sections/footer/_footer.scss
+++ b/app/views/frontend/sections/footer/_footer.scss
@@ -23,17 +23,37 @@ footer{background: #1A1C21;}
     justify-content: space-between;
     margin-bottom: 50px;
   }
-  @include media("<610px"){
+  @include media("<510px"){
     flex-wrap: wrap;
     margin-bottom: 30px;
   }
 }
 .footer_item{
+  $root:&;
   margin-bottom: 25px;
   font-weight: normal;
   font-size: 16px;
   line-height: 100%;
   color: #fff;
+  &__payment{
+    display: flex;
+    width: 100%;
+    &_icon{
+      padding-right: 10px;
+      &:last-child{
+        padding: 0;
+      }
+    }
+
+    @include media("<610px"){
+
+      justify-content: flex-end;
+    }
+    @include media("<410px"){
+
+      justify-content: flex-start;
+    }
+  }
   &:last-child{
     margin-bottom: 0;
   }
@@ -49,6 +69,9 @@ footer{background: #1A1C21;}
 
     margin-bottom: 20px;
     margin-right: 20px;
+    &:last-child{
+      margin-bottom: 20px;
+    }
   }
 }
 
